# ComponentHub

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.fr.md  README.md  ROADMAP.md  platformio.ini
cmake/toolchains/: linux-aarch64.cmake
docs/: ADR-0001-desktop-maitre-esp32-satellite.md  API.md  ARCHITECTURE.md  BOOT_LOG.md  BUILD_DESKTOP.md  WIFI_SETUP.md
docs/en/: README.md
docs/fr/: ADR-0001-desktop-maitre-esp32-satellite.md  ARCHITECTURE.md  BUILD_DESKTOP.md  GETTING_STARTED.md  SUPERVISION_ET_MAJ.md  SYNCHRONISATION.md  USER_MANUAL.md
include/: project_config.h
resources/: app.qrc  app.rc
resources/themes/: app.qss  dark.theme  light.theme
scripts/linux/: componenthub.desktop  install.sh  package-appimage.sh  package-deb.sh
scripts/windows/: deploy-mingw.sh  package-win.ps1  vscode-mingw.ps1
src/: AppContext.h  main.cpp  smoke_main.cpp
src/api/api_router/: api_router.h
src/domain/: category.h  component.h  csv.cpp  csv.h  document.h  document_repository.h  document_service.h  ids.h  import_export_service.cpp  import_export_service.h  inventory_service.cpp  inventory_service.h  location.h  project.h  project_component.h  project_repositories.h  project_service.cpp  project_service.h  referential.h  referential_repository.h  repositories.h  stock_movement.h  sync_meta.h  sync_record.h
src/modules/boot_log/: boot_log.cpp  boot_log.h
src/modules/document/: document_module.cpp  document_module.h
src/modules/importexport/: importexport_module.cpp  importexport_module.h
src/modules/inventory/: inventory_module.cpp  inventory_module.h
src/modules/project/: project_module.cpp  project_module.h
src/net/: HttpClient.cpp  HttpClient.h
src/platform/: Clock.h  Tar.cpp  Tar.h
src/services/mdns_manager/: mdns_manager.cpp
src/services/ota_manager/: ota_manager.cpp  ota_manager.h
src/services/storage_manager/: storage_manager.cpp  storage_manager.h
src/services/web_assets/: web_assets.cpp  web_assets.h
src/services/web_manager/: web_manager.cpp  web_manager.h
src/services/wifi_manager/: wifi_manager.cpp
src/storage/: FileRepositories.cpp  FileRepositories.h  JsonStore.h  category_repository.cpp  category_repository.h  component_repository.cpp  component_repository.h  document_repository.cpp  document_repository.h  json_store_util.h  location_repository.cpp  location_repository.h  project_component_repository.cpp  project_component_repository.h  project_repository.cpp  project_repository.h  stock_movement_repository.cpp  stock_movement_repository.h
src/sync/: SyncService.cpp  SyncService.h
src/ui/: AppConfigIO.h  CategoriesPage.cpp  CategoriesPage.h  ComponentDialog.cpp  ComponentDialog.h  Icons.cpp  Icons.h  ImportExportPage.cpp  ImportExportPage.h  InventoryPage.cpp  InventoryPage.h  LocationsPage.cpp  LocationsPage.h  MainWindow.cpp  MainWindow.h  ProjectsPage.cpp  ProjectsPage.h  ReferentialsPage.cpp  ReferentialsPage.h  SettingsPage.cpp  SettingsPage.h  SyncPrefs.h  Theme.cpp  Theme.h  UiKit.h
tools/: generate_web_assets.py  minify_web.py  release.py
web_src/: categories.html  debug.html  import-export.html  import-export.js  index.html  index.js  inventory.css  inventory.html  inventory.js  locations.html  menu.js  projects.html  projects.js  settings.html  style.css  system.html
